내강의실 수정사항 업로드2

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -6693,6 +6693,7 @@ ul li.profList .willbes-Layer-ProfileBox {
 .MyInfoBox table.myTable {
     width: 115px;
     height: 68px;
+    font-size: 13px;
 }
 .MyInfoBox table.myTable td.subTit {
     text-align: left;
