lms > 주문관리 > 결제상태 구분 관련 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -491,16 +491,16 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     border-right-width: 0 !important;
 }
 .bdt-line {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #ddd !important;
 }
 .bdr-line {
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #ddd !important;
 }
 .bdl-line {
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #ddd !important;
 }
 .bdb-line {
-    border-bottom: 1px solid  #ddd;
+    border-bottom: 1px solid  #ddd !important;
 }
 
 /* no-margin */
