진행중인 이벤트 페이지 수정 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -482,6 +482,9 @@ select[disabled] {
 .h460 {
   height: 460px !important;
 }
+.h470 {
+  height: 470px !important;
+}
 .h520 {
   height: 520px !important;
 }
