--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3885,6 +3885,47 @@ table.classTable tr td.w-data {
     margin-left: 10px;
 }
 
+
+/* subContainer : Content : 강의목차 : LeclistTable : evtTable : popup일경우 */
+form .LeclistTable .evtTable thead tr th {
+    background: none;
+}
+form .LeclistTable .evtTable thead tr td {
+    background: none;
+    border-top: 1px solid #edeeef;
+}
+form .LeclistTable .evtTable thead tr:first-child td {
+    border-top: 1px solid #959595;
+}
+form .LeclistTable .evtTable tr th textarea {
+    float: left;
+    width: 270px;
+    height: 55px;
+    font-weight: 300;
+    border: 1px solid #d4d4d4;
+    resize: none;
+    vertical-align: middle;
+    padding: 20px;
+    line-height: 16px;
+}
+form .LeclistTable .evtTable tr th button {
+    height: 55px;
+    line-height: 53px;
+}
+form .LeclistTable .evtTable tr td {
+    line-height: 16px;
+    padding: 12px 0;
+}
+form .LeclistTable .evtTable tr td a.w-del {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+
+
+
+
+
 /* subContainer : Content : 강의목차 : LecViewTable */
 .LecViewTable .listTable {
     clear: both;
@@ -4501,8 +4542,6 @@ table.classTable tr td.w-data {
 }
 
 /* counsel Reserve */
-.counsel_infoBox {}
-
 .counsel_infoBox .listTable .userInfoBox th,
 .counsel_infoBox .listTable .userInfoBox td {
     padding: 8px 0;
@@ -4561,7 +4600,7 @@ table.classTable tr td.w-data {
     margin-top: 10px;
 }
 
-
+/* counsel Step : 01. 상담일자/시간선택 */
 .willbes-counsel_step .step .info-Box {
     position: relative;
     background: #eee;
@@ -4593,24 +4632,34 @@ table.classTable tr td.w-data {
     border-width: 12px;
 }
 .willbes-counsel_step .step .info-Box1:before {
-    margin-left: 115px;
+    margin-left: 105px;
 }
 .willbes-counsel_step .step .info-Box1:after {
-    margin-left: 115px;
+    margin-left: 105px;
 }
 .willbes-counsel_step .step .info-Box2:before {
-    margin-left: 450px;
+    margin-left: 430px;
 }
 .willbes-counsel_step .step .info-Box2:after {
-    margin-left: 450px;
+    margin-left: 430px;
 }
 .willbes-counsel_step .step .info-Box3:before {
-    margin-left: 780px;
+    margin-left: 760px;
 }
 .willbes-counsel_step .step .info-Box3:after {
-    margin-left: 780px;
+    margin-left: 760px;
 }
 
+/* counsel Step : 02. 사전정보입력 */
+table.counselTable .w-info {
+    line-height: 25px !important;
+}
+table.counselTable .w-selec-Area input[type="checkbox"] {
+    float: left;
+}
+table.counselTable .w-info label {
+    margin-top: 0 !important;
+}
 
 
 
@@ -7432,6 +7481,10 @@ table.PassZoneTable .w-data {
 }
 .willbes-Layer-PassBox420.h350.fix {
     margin-top: -175px;
+    margin-left: -210px;  
+}
+.willbes-Layer-PassBox420.h470.fix {
+    margin-top: -235px;
     margin-left: -210px;  
 }
 .willbes-Layer-PassBox600.h590.fix {
