lms > 포인트 > 전체포인트현황 메뉴 소스 추가

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -365,6 +365,11 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     color: #e74c3c !important;
 }
 
+/* font */
+.bold {
+    font-weight: bold !important;
+}
+
 /* form */
 .form-inline .btn.btn-sm {
     margin-bottom: -1px;
