--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1683,7 +1683,7 @@ span {
 }
 .calendarTable .table-condensed tr th,
 .calendarTable .table-condensed tr td {
-    font-size: 15px;
+    font-size: 18px;
 }
 .calendarTable .table-condensed tr.month th {
     font-size: 28px;
@@ -1703,48 +1703,49 @@ span {
     text-align: center;
 }
 .calendarTable .table-condensed tbody tr td {
+    position: relative;
     height: 50px;
-    font-weight: 600;
     color: #666;
     text-align: center;
     border-bottom: 1px solid #e4e4e4;
 }
-
-
-.calendarTable .table-condensed tr td span {
-    display: block;
-    width: 100%;
-    height: 100%;
-    line-height: 48px;
-}
-.calendarTable .table-condensed tr td span.start:after {
+.calendarTable .table-condensed tr td.start:after {
+    position: absolute;
+    top: 0;
+    right: 0;
     content: '';
+    display: inline-block;
+    background: #e9e9e9;
     width: 0; 
     height: 0; 
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid green;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-left: 15px solid #333;
+}
+.calendarTable .table-condensed tr td.end:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    display: inline-block;
+    background: #e9e9e9;
+    width: 0; 
+    height: 0; 
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent; 
+    border-right: 15px solid #333;
+}
+.calendarTable .table-condensed tr td.start {
+    background: #333;
+    color: #fff;
 }
 .calendarTable .table-condensed tr td.ing {
     background: #e9e9e9;
 }
-.calendarTable .table-condensed tr td span.end {
-    width: 0; 
-    height: 0; 
-    border-top: 48px solid transparent;
-    border-bottom: 48px solid transparent; 
-    border-right:48px solid blue; 
+.calendarTable .table-condensed tr td.end {
+    background: #333;
+    color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
