--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1709,6 +1709,10 @@ span {
     text-align: center;
     border-bottom: 1px solid #e4e4e4;
 }
+.calendarTable .table-condensed tbody tr td .num {
+    position: relative;
+    z-index: 10;
+}
 .calendarTable .table-condensed tr td.start:after {
     position: absolute;
     top: 0;
@@ -1718,7 +1722,7 @@ span {
     background: #e9e9e9;
     width: 0; 
     height: 0; 
-    border-top: 25px solid transparent;
+    border-top: 24px solid transparent;
     border-bottom: 25px solid transparent;
     border-left: 15px solid #333;
 }
