--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1080,7 +1080,6 @@ span {
     font-family: "NanumGothic-Regular", "Nanum Gothic", "나눔고딕", "sans-serif";
     font-size: 12px;
     line-height: 16px;
-    margin-top: 5px;
 }
 .lecTable .w-info span {
     vertical-align: baseline;
@@ -1333,6 +1332,7 @@ span {
 .passProfTabs .w-info {
     clear: both;
     padding-top: 10px;
+    margin-top: 5px;
 }
 .passTabs {
     padding: 0;
@@ -1653,14 +1653,6 @@ span {
     top: 27px;
     right: 25px;
 }
-.willbes-Layer-PassBox .Layer-Tit {
-    font-size: 21px;
-    font-weight: 600;
-    color: #3a3a3a;
-    letter-spacing: 0;
-    padding: 5px 0 10px;
-    border-bottom: 1px solid #ccc;
-}
 .willbes-Layer-Black .AddlecMore {
     margin: 20px 0;
 }
@@ -1683,10 +1675,10 @@ span {
 }
 .calendarTable .table-condensed tr th,
 .calendarTable .table-condensed tr td {
-    font-size: 18px;
+    font-size: 3vw;
 }
 .calendarTable .table-condensed tr.month th {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 600;
     padding: 22px 0;
 }
@@ -1721,10 +1713,10 @@ span {
     display: inline-block;
     background: #e9e9e9;
     width: 0; 
-    height: 0; 
+    height: 49px; 
     border-top: 24px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-left: 15px solid #333;
+    border-bottom: 24px solid transparent;
+    border-left: 10px solid #333;
 }
 .calendarTable .table-condensed tr td.end:before {
     position: absolute;
@@ -1790,5 +1782,9 @@ span {
     .willbes-Layer-PassBox600 {
         left: 50%;
         margin-left: -300px;
+    }
+    .calendarTable .table-condensed tr th,
+    .calendarTable .table-condensed tr td {
+        font-size: 16px;
     }
 }
