--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1180,6 +1180,9 @@ span {
 .lecTable tr td:last-child {
     padding-right: 20px;
 }
+.lecTable tr td.w-data a {
+    display: block;
+}
 .lecTable dl dt {
     display: inline-block;
 }
@@ -1726,10 +1729,10 @@ span {
     display: inline-block;
     background: #e9e9e9;
     width: 0; 
-    height: 0; 
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent; 
-    border-right: 15px solid #333;
+    height: 49px; 
+    border-top: 24px solid transparent;
+    border-bottom: 24px solid transparent; 
+    border-right: 10px solid #333;
 }
 .calendarTable .table-condensed tr td.start {
     background: #333;
