모바일웹 css 테스트2

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1668,7 +1668,7 @@ span {
     top: 50%;
 }
 .willbes-Layer-PassBox600.h470.fix {
-    margin-top: 100px;
+    margin-top: 300em;
 }
 
 /* calendarTable */
