모바일웹 css 테스트4

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1665,6 +1665,7 @@ span {
 .willbes-Layer-PassBox.fix {
     position: fixed;
     display: block;
+    top: 0;
 }
 .willbes-Layer-PassBox600.h470.fix {
 
