--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1663,6 +1663,8 @@ span {
     max-width: 600px;
 }
 .willbes-Layer-PassBox.fix {
+    -webkit-transform: translate3d(0, 0, 0); 
+    transform: translate3d(0, 0, 0);
     position: fixed;
     display: block;
     top: 0;
