--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1663,12 +1663,10 @@ span {
     max-width: 600px;
 }
 .willbes-Layer-PassBox.fix {
-    -webkit-transform: translate3d(0, 0, 0); 
-    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate(0%, 50%); 
+    transform: translate(0%, 50%);
     position: fixed;
     display: block;
-    top: 0;
-    left: 50%;
 }
 .willbes-Layer-PassBox600.h470.fix {
 
