모바일웹 css 테스트7

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1663,9 +1663,7 @@ span {
     max-width: 600px;
 }
 .willbes-Layer-PassBox.fix {
-    -webkit-transform: translate(0%, 50%); 
-    transform: translate(0%, 50%);
-    position: fixed;
+    position: absolute;
     display: block;
 }
 .willbes-Layer-PassBox600.h470.fix {
