모바일웹 css 테스트8

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1644,7 +1644,8 @@ span {
     height: 100%;
 }
 .willbes-Layer-PassBox {
-    float: left;
+    position: relative;
+    top: 10%;
     width: 90%;
     background: #fff;
     padding: 20px 25px;
@@ -1662,13 +1663,8 @@ span {
 .willbes-Layer-PassBox600 {
     max-width: 600px;
 }
-.willbes-Layer-PassBox.fix {
-    position: absolute;
-    display: block;
-}
-.willbes-Layer-PassBox600.h470.fix {
-
-}
+.willbes-Layer-PassBox.fix {}
+.willbes-Layer-PassBox600.h470.fix {}
 
 /* calendarTable */
 .calendarTable {
