--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1644,8 +1644,7 @@ span {
     height: 100%;
 }
 .willbes-Layer-PassBox {
-    position: relative;
-    top: 10%;
+    float: left;
     width: 90%;
     background: #fff;
     padding: 20px 25px;
@@ -1663,8 +1662,14 @@ span {
 .willbes-Layer-PassBox600 {
     max-width: 600px;
 }
-.willbes-Layer-PassBox.fix {}
-.willbes-Layer-PassBox600.h470.fix {}
+.willbes-Layer-PassBox.fix {
+    position: fixed;
+    display: block;
+    top: 50%;
+}
+.willbes-Layer-PassBox600.h470.fix {
+    margin-top: -235px;
+}
 
 /* calendarTable */
 .calendarTable {
