모바일웹 css 테스트10

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1634,7 +1634,7 @@ span {
 /* willbes-Layer-PassBox */
 .willbes-Layer-Black {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
