--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1646,7 +1646,7 @@ span {
 .willbes-Layer-PassBox {
     float: left;
     width: 90%;
-    background: #fff;
+    background: #f90;
     padding: 20px 25px;
     margin: 0 5%;
     z-index: 105;
@@ -1664,11 +1664,10 @@ span {
 }
 .willbes-Layer-PassBox.fix {
     position: fixed;
-    display: block;
-    top: 50%;
+    top: 0;
+    left: 0;
 }
 .willbes-Layer-PassBox600.h470.fix {
-    margin-top: -235px;
 }
 
 /* calendarTable */
