모바일웹 이미지 css 수정1

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -267,6 +267,13 @@ span {
     margin-top: -21px;
     margin-left: -60px;
 }
+#header .logo a {
+    display: inline-block;
+    height: 42px;
+}
+#header .logo a img {
+    height: 100%;
+}
 #Header .Login-List {
     height: 52px;
 }
