--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -232,6 +232,7 @@ span {
 }
 #Header button.menubar {
     background: url("../../../img/willbes/m/main/icon_menu.png") no-repeat 0 0;
+    background-size: 46px 46px;
     width: 46px;
     height: 46px;
     border: none;
@@ -242,6 +243,7 @@ span {
 }
 #Header button.mypage {
     background: url("../../../img/willbes/m/main/icon_mypage.png") no-repeat 0 0;
+    background-size: 46px 46px;
     width: 46px;
     height: 46px;
     border: none;
@@ -252,6 +254,7 @@ span {
 }
 #Header button.myacad {
     background: url("../../../img/willbes/m/main/icon_myacad.png") no-repeat 0 0;
+    background-size: 46px 46px;
     width: 46px;
     height: 46px;
     border: none;
@@ -269,9 +272,11 @@ span {
 }
 #header .logo a {
     display: inline-block;
+    width: 120px;
     height: 42px;
 }
 #header .logo a img {
+    width: 100%;
     height: 100%;
 }
 #Header .Login-List {
