모바일웹 이미지 css 수정3

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -253,7 +253,7 @@ span {
     margin-top: -23px;
 }
 #Header button.myacad {
-    background: url("../../../img/willbes/m/main/icon_myacad.png") no-repeat 0 0;
+    background: url("../../../img/willbes/m/main/icon_menu.gif") no-repeat 0 0;
     background-size: 46px 46px;
     width: 46px;
     height: 46px;
