모바일웹 이미지 css 수정5

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -227,45 +227,48 @@ span {
 
 /* Header : 공통 */
 #Header .Menu-List {
-    height: 62px;
+    height: 52px;
     border-bottom: 1px solid #ccc;
 }
 #Header button.menubar {
-    background: url("../../../img/willbes/m/main/icon_menu.png") no-repeat 0 0;
+    background: url("../../../img/willbes/m/main/icon_menu.png") no-repeat center center;
+    background-size: 38px 38px;
     width: 46px;
     height: 46px;
     border: none;
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: 5px;
     margin-top: -23px;
 }
 #Header button.mypage {
-    background: url("../../../img/willbes/m/main/icon_mypage.png") no-repeat 0 0;
+    background: url("../../../img/willbes/m/main/icon_mypage.png") no-repeat center center;
+    background-size: 38px 38px;
     width: 46px;
     height: 46px;
     border: none;
     position: absolute;
     top: 50%;
-    right: 10px;
+    right: 5px;
     margin-top: -23px;
 }
 #Header button.myacad {
-    background: url("../../../img/willbes/m/main/icon_myacad.png") no-repeat 0 0;
+    background: url("../../../img/willbes/m/main/icon_myacad.png") no-repeat center center;
+    background-size: 38px 38px;
     width: 46px;
     height: 46px;
     border: none;
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: 5px;
     margin-top: -23px;
 }
 #header .logo {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -21px;
-    margin-left: -60px;
+    margin-top: -17px;
+    margin-left: -50px;
 }
 #header .logo a {
     display: inline-block;
